--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ https://github.com/ardacarofficial/links-website is open source project.
             <button class="main_small_button_item">Pest Control Management</button>
           </a>
           <a class="main_small_a_item" href="dashboardbln.html" target="_blank" rel="nofollow">
-            <button class="main_small_button_item">Monitoring Day Of Inventory(DOI)</button>
+            <button class="main_small_button_item">Monitoring Day Of Inventory (DOI)</button>
           </a>
         </div>
 		<!-- Menu Small Item -->
@@ -99,6 +99,10 @@ https://github.com/ardacarofficial/links-website is open source project.
             <button class="main_small_button_item">Upload OR Slip Setoran Tunai / TAG</button>
           </a>
         </div>
+	      <!-- Menu Item -->
+        <a class="main_a_item" href="https://docs.google.com/spreadsheets/d/1w9JOoTpAQ6cUI299rQYCUYooTnQf1RrHROyJN4OCbZo/edit?gid=1890888505#gid=1890888505" target="_blank" rel="nofollow">
+          <button class="main_button_item">Data Monitoring Sales TC REKSA 2025</button>
+        </a>
 		<!-- Menu Item -->
         <a class="main_a_item" href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/hhb_aeonmalljgc_hokben_co_id/EcxxnJuwI5dAmOkFGCY5rKYBPNPNDMkXWDgm2HjKTKEsUA?CID=f0977ceb-87e5-0237-5128-400088691c28&e=QE7Cq7" target="_blank" rel="nofollow">
           <button class="main_button_item">Data Monitoring Pemakaian Air dan Listrik 2025</button>
@@ -111,6 +115,7 @@ https://github.com/ardacarofficial/links-website is open source project.
         <a class="main_a_item" href="commingsoon.html" target="_blank" rel="nofollow">
           <button class="main_button_item">Data Monitoring General Cleaning</button>
         </a>
+	
         <!-- Menu Item -->
         <a class="main_a_item" href="https://docs.google.com/spreadsheets/d/17bCbbw01SjzDhBjNXAkQQ8q1buKgshHd/edit?gid=905537533#gid=905537533" target="_blank" rel="nofollow">
           <button class="main_button_item">Report Monitoring Complaint 2025</button>
@@ -136,7 +141,7 @@ https://github.com/ardacarofficial/links-website is open source project.
         </div>
 		<!-- Menu Small Item -->
         <div class="main_small_button_list">
-          <a class="main_small_a_item" href="dashboardperfo.html" target="_blank" rel="nofollow">
+          <a class="main_small_a_item" href="commingsoon.html" target="_blank" rel="nofollow">
             <button class="main_small_button_item">Accountability</button>
           </a>
           <a class="main_small_a_item" href="commingsoon.html" target="_blank" rel="nofollow">
@@ -145,7 +150,7 @@ https://github.com/ardacarofficial/links-website is open source project.
         </div>
 		<!-- Menu Small Item -->
         <div class="main_small_button_list">
-          <a class="main_small_a_item" href="dashboardperfo.html" target="_blank" rel="nofollow">
+          <a class="main_small_a_item" href="commingsoon.html" target="_blank" rel="nofollow">
             <button class="main_small_button_item">Inventory </button>
           </a>
           <a class="main_small_a_item" href="commingsoon.html" target="_blank" rel="nofollow">
@@ -156,7 +161,7 @@ https://github.com/ardacarofficial/links-website is open source project.
         <a class="main_a_item" href="cs/commingsoon.html" target="_blank" rel="nofollow">
           <button class="main_button_item">Improvement 2025</button>
         </a>
-      </section>
+	
       <!-- Menu Container 2 Codes End -->
 
       <!-- Menu Container 3 Codes Start -->
