--- a/index.html
+++ b/index.html
@@ -115,6 +115,14 @@ https://github.com/ardacarofficial/links-website is open source project.
         <a class="main_a_item" href="commingsoon.html" target="_blank" rel="nofollow">
           <button class="main_button_item">Data Monitoring General Cleaning</button>
         </a>
+	!-- Menu Item -->
+        <a class="main_a_item" href="https://docs.google.com/spreadsheets/d/18fDyaJ0zgI44Yd6vXQkPSFhhyBjJsWaq/edit?gid=1878045228#gid=1878045228" target="_blank" rel="nofollow">
+          <button class="main_button_item">Data Rekap Disposal Asset & Non Asset</button>
+        </a>
+	!-- Menu Item -->
+        <a class="main_a_item" href="commingsoon.html" target="_blank" rel="nofollow">
+          <button class="main_button_item">Data Monitoring Shift Management 2025</button>
+        </a>
 	
         <!-- Menu Item -->
         <a class="main_a_item" href="https://docs.google.com/spreadsheets/d/17bCbbw01SjzDhBjNXAkQQ8q1buKgshHd/edit?gid=905537533#gid=905537533" target="_blank" rel="nofollow">
@@ -161,7 +169,7 @@ https://github.com/ardacarofficial/links-website is open source project.
         <a class="main_a_item" href="cs/commingsoon.html" target="_blank" rel="nofollow">
           <button class="main_button_item">Improvement 2025</button>
         </a>
-	
+	   </section>	
       <!-- Menu Container 2 Codes End -->
 
       <!-- Menu Container 3 Codes Start -->
