--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ https://github.com/ardacarofficial/links-website is open source project.
       <nav>
         <ul class="header_nav_menu_list flex_no_wrap_row_center">
           <li data-target="#main_section_container_1" id="header_nav_menu_item_1" class="header_nav_menu_item" href="">REPORT HARIAN</li>
-          <li data-target="#main_section_container_2" id="header_nav_menu_item_2" class="header_nav_menu_item" href="">REPORT BULANAN</li>
+          <li data-target="#main_section_container_2" id="header_nav_menu_item_2" class="header_nav_menu_item" href="">REPORT PROJECT</li>
           <li data-target="#main_section_container_3" id="header_nav_menu_item_3" class="header_nav_menu_item" href="">Aplikasi HokBen</li>
         </ul>
       </nav>
@@ -107,7 +107,26 @@ https://github.com/ardacarofficial/links-website is open source project.
         <a class="main_a_item" href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/hhb_aeonmalljgc_hokben_co_id/EcxxnJuwI5dAmOkFGCY5rKYBPNPNDMkXWDgm2HjKTKEsUA?CID=f0977ceb-87e5-0237-5128-400088691c28&e=QE7Cq7" target="_blank" rel="nofollow">
           <button class="main_button_item">Data Monitoring Pemakaian Air dan Listrik 2025</button>
         </a>
-		<!-- Menu Item -->
+		
+      </section>	   
+      <!-- Menu Container 1 Codes End -->
+
+      <!-- Menu Container 2 Codes Start -->
+      <section id="main_section_container_2" class="flex_column_center">
+        <!-- Menu Text Item -->
+        <div class="main_text_item">
+          <p>DIISI SETIAP AKHIR BULAN</p>
+        </div>
+        <!-- Menu Small Item -->
+        <div class="main_small_button_list">
+          <a class="main_small_a_item" href="dashboardperfo.html" target="_blank" rel="nofollow">
+            <button class="main_small_button_item">Database Performance 2025</button>
+          </a>
+          <a class="main_small_a_item" href="commingsoon.html" target="_blank" rel="nofollow">
+            <button class="main_small_button_item">RMO</button>
+          </a>
+        </div>
+	<!-- Menu Item -->
         <a class="main_a_item" href="https://docs.google.com/spreadsheets/d/1jF2blHhOeLxYmoeZTTCWsE32pUcgLdlDzfmPMaH1jrA/edit?resourcekey=&gid=896362206#gid=896362206" target="_blank" rel="nofollow">
           <button class="main_button_item">Data Monitoring Setoran Tunai dan TAG</button>
         </a>
@@ -127,42 +146,6 @@ https://github.com/ardacarofficial/links-website is open source project.
         <a class="main_a_item" href="https://docs.google.com/spreadsheets/d/17bCbbw01SjzDhBjNXAkQQ8q1buKgshHd/edit?gid=905537533#gid=905537533" target="_blank" rel="nofollow">
           <button class="main_button_item">Report Monitoring Complaint 2025</button>
         </a>
-      </section>	   
-      <!-- Menu Container 1 Codes End -->
-
-      <!-- Menu Container 2 Codes Start -->
-      <section id="main_section_container_2" class="flex_column_center">
-        <!-- Menu Text Item -->
-        <div class="main_text_item">
-          <p>DIISI SETIAP AKHIR BULAN</p>
-        </div>
-        <!-- Menu Small Item -->
-        <div class="main_small_button_list">
-          <a class="main_small_a_item" href="dashboardperfo.html" target="_blank" rel="nofollow">
-            <button class="main_small_button_item">Database Performance 2025</button>
-          </a>
-          <a class="main_small_a_item" href="commingsoon.html" target="_blank" rel="nofollow">
-            <button class="main_small_button_item">RMO</button>
-          </a>
-        </div>
-		<!-- Menu Small Item -->
-        <div class="main_small_button_list">
-          <a class="main_small_a_item" href="commingsoon.html" target="_blank" rel="nofollow">
-            <button class="main_small_button_item">Accountability</button>
-          </a>
-          <a class="main_small_a_item" href="commingsoon.html" target="_blank" rel="nofollow">
-            <button class="main_small_button_item">PNL</button>
-          </a>
-        </div>
-		<!-- Menu Small Item -->
-        <div class="main_small_button_list">
-          <a class="main_small_a_item" href="commingsoon.html" target="_blank" rel="nofollow">
-            <button class="main_small_button_item">Inventory </button>
-          </a>
-          <a class="main_small_a_item" href="commingsoon.html" target="_blank" rel="nofollow">
-            <button class="main_small_button_item">Breakdown Sales</button>
-          </a>
-        </div>
         <!-- Menu Item -->
         <a class="main_a_item" href="cs/commingsoon.html" target="_blank" rel="nofollow">
           <button class="main_button_item">Improvement 2025</button>
