--- a/index.html
+++ b/index.html
@@ -127,6 +127,10 @@ https://github.com/ardacarofficial/links-website is open source project.
           </a>
         </div>
 	<!-- Menu Item -->
+        <a class="main_a_item" href="https://bit.ly/MPRAREA2_2025" target="_blank" rel="nofollow">
+          <button class="main_button_item">Upload Monthly Perfomance Report 2025</button>
+        </a>
+	<!-- Menu Item -->
         <a class="main_a_item" href="https://docs.google.com/spreadsheets/d/1jF2blHhOeLxYmoeZTTCWsE32pUcgLdlDzfmPMaH1jrA/edit?resourcekey=&gid=896362206#gid=896362206" target="_blank" rel="nofollow">
           <button class="main_button_item">Data Monitoring Setoran Tunai dan TAG</button>
         </a>
