--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ https://github.com/ardacarofficial/links-website is open source project.
         <!-- Menu Small Item -->
         <div class="main_small_button_list">
           <a class="main_small_a_item" href="dashboardperfo.html" target="_blank" rel="nofollow">
-            <button class="main_small_button_item">Database Performance (MPR 2025)</button>
+            <button class="main_small_button_item">Database Performance 2025</button>
           </a>
           <a class="main_small_a_item" href="commingsoon.html" target="_blank" rel="nofollow">
             <button class="main_small_button_item">RMO</button>
