--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ https://github.com/ardacarofficial/links-website is open source project.
           <a class="main_small_a_item" href="https://online.hokben.net/websurvey/amcp-panel/login" target="_blank" rel="nofollow">
             <button class="main_small_button_item">Feedback key Kode</button>
           </a>
-          <a class="main_small_a_item" href="http://172.18.100.166/Reports/Pages/Report.aspx?ItemPath=%2fLaporan+Customer%2fFeedback+Store" target="_blank" rel="nofollow">
+          <a class="main_small_a_item" href="http://172.18.100.166/Reports/Pages/Report.aspx?ItemPath=%2fDept+Customer+Experience%2fLaporan+Feedback+Customer%2fFeedback+Store" target="_blank" rel="nofollow">
             <button class="main_small_button_item">Feedback monitoring</button>
           </a>
         </div>
