--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ https://github.com/ardacarofficial/links-website is open source project.
       <section id="main_section_container_1" class="flex_column_center">
         <!-- Menu Text Item -->
         <div class="main_text_item">
-          <p>Di Check dan diisi setiap hari</p>
+          <p>app versi 1.2 ( Update 19 Mei 2025 )</p>
         </div>
         <!-- Menu Small Item -->
         <div class="main_small_button_list">
