--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ https://github.com/ardacarofficial/links-website is open source project.
           <a class="main_small_a_item" href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/rachmat_alfathir_hokben_co_id/ETSq9hlBIrxLo-SLATB-owYB8BH9QOqaQaqwRjUBjFP0CQ?rtime=oP90ANiO3Ug" target="_blank" rel="nofollow">
             <button class="main_small_button_item">Monitoring Saldo Akhir Promo 2025</button>
           </a>
-          <a class="main_small_a_item" href="dashboardpep.html" target="_blank" rel="nofollow">
+          <a class="main_small_a_item" href="pep.html" target="_blank" rel="nofollow">
             <button class="main_small_button_item">Kontrol PEP Harian</button>
           </a>
         </div>
