--- a/index.html
+++ b/index.html
@@ -77,16 +77,16 @@ https://github.com/ardacarofficial/links-website is open source project.
           <a class="main_small_a_item" href="http://hws.hokben.net:888/Login.aspx" target="_blank" rel="nofollow">
             <button class="main_small_button_item">Pest Control Management</button>
           </a>
-          <a class="main_small_a_item" href="dashboardbln.html" target="_blank" rel="nofollow">
+          <a class="main_small_a_item" href="month.html" target="_blank" rel="nofollow">
             <button class="main_small_button_item">Monitoring Day Of Inventory (DOI)</button>
           </a>
         </div>
 		<!-- Menu Small Item -->
         <div class="main_small_button_list">
-          <a class="main_small_a_item" href="dashboardgrab.html" target="_blank" rel="nofollow">
+          <a class="main_small_a_item" href="grab.html" target="_blank" rel="nofollow">
             <button class="main_small_button_item">Check Ketersedian Menu Grab food</button>
           </a>
-		  <a class="main_small_a_item" href="dashboardgofood.html" target="_blank" rel="nofollow">
+		  <a class="main_small_a_item" href="gofood.html" target="_blank" rel="nofollow">
             <button class="main_small_button_item">Check Ketersedian Menu Gofood</button>
           </a>
         </div>
@@ -119,7 +119,7 @@ https://github.com/ardacarofficial/links-website is open source project.
         </div>
         <!-- Menu Small Item -->
         <div class="main_small_button_list">
-          <a class="main_small_a_item" href="dashboardperfo.html" target="_blank" rel="nofollow">
+          <a class="main_small_a_item" href="perfomance.html" target="_blank" rel="nofollow">
             <button class="main_small_button_item">Database Performance 2025</button>
           </a>
           <a class="main_small_a_item" href="commingsoon.html" target="_blank" rel="nofollow">
