--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@ https://github.com/ardacarofficial/links-website is open source project.
         </div>
 	<!-- Menu Item -->
         <a class="main_a_item" href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/hhb_senayancity_hokben_co_id/ESgWVm5J2DpNubhEB00i3o0By-IrK_LHmxqAv2FO29DpAg?e=UW1haR&CID=757a2245-ba3c-81f5-28e4-703594c5096a" target="_blank" rel="nofollow">
-          <button class="main_button_item">Upload Monthly Perfomance Report 2025</button>
+          <button class="main_button_item">Monitoring Service Index 2025</button>
         </a>
 	<!-- Menu Item -->
         <a class="main_a_item" href="https://bit.ly/MPRAREA2_2025" target="_blank" rel="nofollow">
-          <button class="main_button_item">Monitoring Service Index 2025</button>
+          <button class="main_button_item">Upload MPR 2025</button>
         </a>
 	<!-- Menu Item -->
         <a class="main_a_item" href="https://docs.google.com/spreadsheets/d/1jF2blHhOeLxYmoeZTTCWsE32pUcgLdlDzfmPMaH1jrA/edit?resourcekey=&gid=896362206#gid=896362206" target="_blank" rel="nofollow">
