--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ https://github.com/ardacarofficial/links-website is open source project.
           <button class="main_button_item">Report Monitoring Complaint 2025</button>
         </a>
         <!-- Menu Item -->
-        <a class="main_a_item" href="cs/commingsoon.html" target="_blank" rel="nofollow">
+        <a class="main_a_item" href="commingsoon.html" target="_blank" rel="nofollow">
           <button class="main_button_item">Improvement 2025</button>
         </a>
 	   </section>	
