--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ https://github.com/ardacarofficial/links-website is open source project.
           <button class="main_button_item">Data Monitoring Setoran Tunai dan TAG</button>
         </a>
 		<!-- Menu Item -->
-        <a class="main_a_item" href="commingsoon.html" target="_blank" rel="nofollow">
+        <a class="main_a_item" href="https://docs.google.com/spreadsheets/d/19jh1QYgnjOJc311wYIO7K7uV6Tsigts60PzscchAgO0/edit?resourcekey=&gid=818842000#gid=818842000" target="_blank" rel="nofollow">
           <button class="main_button_item">Data Monitoring General Cleaning</button>
         </a>
 	        <!-- Menu Item -->
