--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ https://github.com/ardacarofficial/links-website is open source project.
       <section id="main_section_container_1" class="flex_column_center">
         <!-- Menu Text Item -->
         <div class="main_text_item">
-          <p>app versi 1.2 ( Update 19 Mei 2025 )</p>
+          <p>App versi 1.2 ( Update 22 Mei 2025 )</p>
         </div>
         <!-- Menu Small Item -->
         <div class="main_small_button_list">
@@ -127,12 +127,16 @@ https://github.com/ardacarofficial/links-website is open source project.
           </a>
         </div>
 	<!-- Menu Item -->
-        <a class="main_a_item" href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/hhb_senayancity_hokben_co_id/ESgWVm5J2DpNubhEB00i3o0By-IrK_LHmxqAv2FO29DpAg?e=UW1haR&CID=757a2245-ba3c-81f5-28e4-703594c5096a" target="_blank" rel="nofollow">
-          <button class="main_button_item">Monitoring Service Index 2025</button>
+        <a class="main_a_item" href="checkmonth.html" target="_blank" rel="nofollow">
+          <button class="main_button_item">Data Kunjungan Area</button>
         </a>
 	<!-- Menu Item -->
         <a class="main_a_item" href="https://bit.ly/MPRAREA2_2025" target="_blank" rel="nofollow">
           <button class="main_button_item">Upload MPR 2025</button>
+        </a>
+	<!-- Menu Item -->
+        <a class="main_a_item" href="commingsoon.html" target="_blank" rel="nofollow">
+          <button class="main_button_item">Data Monitoring Physical Inspection Store 2025</button>
         </a>
 	<!-- Menu Item -->
         <a class="main_a_item" href="https://docs.google.com/spreadsheets/d/1jF2blHhOeLxYmoeZTTCWsE32pUcgLdlDzfmPMaH1jrA/edit?resourcekey=&gid=896362206#gid=896362206" target="_blank" rel="nofollow">
@@ -142,13 +146,13 @@ https://github.com/ardacarofficial/links-website is open source project.
         <a class="main_a_item" href="https://docs.google.com/spreadsheets/d/19jh1QYgnjOJc311wYIO7K7uV6Tsigts60PzscchAgO0/edit?resourcekey=&gid=818842000#gid=818842000" target="_blank" rel="nofollow">
           <button class="main_button_item">Data Monitoring General Cleaning</button>
         </a>
+	<!-- Menu Item -->
+        <a class="main_a_item" href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/hhb_senayancity_hokben_co_id/ESgWVm5J2DpNubhEB00i3o0By-IrK_LHmxqAv2FO29DpAg?e=UW1haR&CID=757a2245-ba3c-81f5-28e4-703594c5096a" target="_blank" rel="nofollow">
+          <button class="main_button_item">Monitoring Service Index 2025</button>
+        </a>
 	        <!-- Menu Item -->
         <a class="main_a_item" href="https://docs.google.com/spreadsheets/d/18fDyaJ0zgI44Yd6vXQkPSFhhyBjJsWaq/edit?gid=1878045228#gid=1878045228" target="_blank" rel="nofollow">
           <button class="main_button_item">Data Rekap Disposal Asset & Non Asset</button>
-        </a>
-		<!-- Menu Item -->
-        <a class="main_a_item" href="commingsoon.html" target="_blank" rel="nofollow">
-          <button class="main_button_item">Data Monitoring Shift Management 2025</button>
         </a>
         	<!-- Menu Item -->
         <a class="main_a_item" href="https://docs.google.com/spreadsheets/d/17bCbbw01SjzDhBjNXAkQQ8q1buKgshHd/edit?gid=905537533#gid=905537533" target="_blank" rel="nofollow">
