--- a/month.html
+++ b/month.html
@@ -74,31 +74,31 @@ https://github.com/ardacarofficial/links-website is open source project.
           <a class="main_small_a_item" href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/hhb_senayancity_hokben_co_id/EbKqDRcx5P1Fi_0A1MfIjDwBSA0SUyOYtqhC77HivTfzqg?e=iv45tb" target="_blank" rel="nofollow">
             <button class="main_small_button_item">MEI</button>
           </a>
-		  <a class="main_small_a_item" href="https://docs.google.com/spreadsheets/d/1HpPGO5Dr0Y8a9_1aZXnds2JlNkgJvRocenhg2idA8WY/edit?gid=409244131#gid=409244131" target="_blank" rel="nofollow">
+	   <a class="main_small_a_item" href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/hhb_rscarolus_hokben_co_id/EbN6ACTKpzNBuTpT0RiI0DIButnGNGlmcMkgfOcNf47gKQ?e=cdwyjf" target="_blank" rel="nofollow">
             <button class="main_small_button_item">JUNI</button>
           </a>
         </div>
 		<!-- Menu Small Item -->
         <div class="main_small_button_list">
-          <a class="main_small_a_item" href="https://docs.google.com/spreadsheets/d/1mBHgAXovG7bnGO1SDXLfv5GDmijRF56smVvyZcDPhWU/edit?gid=409244131#gid=409244131" target="_blank" rel="nofollow">
+          <a class="main_small_a_item" href="commingsoon.html" target="_blank" rel="nofollow">
             <button class="main_small_button_item">JULI</button>
           </a>
-          <a class="main_small_a_item" href="https://docs.google.com/spreadsheets/d/1lMAuNiD35ToYM7TySxPvKhIsAVQJ26PieeSB6IvKG3Y/edit?gid=409244131#gid=409244131" target="_blank" rel="nofollow">
+          <a class="main_small_a_item" href="commingsoon.html" target="_blank" rel="nofollow">
             <button class="main_small_button_item">AGUSTUS</button>
           </a>
-		  <a class="main_small_a_item" href="https://docs.google.com/spreadsheets/d/10KYNiWiOH6uFZNXSI2L-4VYgyEjoA8SXov0dkqoXL-I/edit?gid=409244131#gid=409244131" target="_blank" rel="nofollow">
+		  <a class="main_small_a_item" href="commingsoon.html" target="_blank" rel="nofollow">
             <button class="main_small_button_item">SEPTEMBER</button>
           </a>
         </div>
 		<!-- Menu Small Item -->
         <div class="main_small_button_list">
-          <a class="main_small_a_item" href="https://docs.google.com/spreadsheets/d/1GaFuJC7hsf4b9qJsXIqXXLouDAQ_9XiKLdFxKiZucn0/edit?gid=409244131#gid=409244131" target="_blank" rel="nofollow">
+          <a class="main_small_a_item" href="commingsoon.html" target="_blank" rel="nofollow">
             <button class="main_small_button_item">OKTOBER</button>
           </a>
-          <a class="main_small_a_item" href="https://docs.google.com/spreadsheets/d/1XhKCZg9pt64TEO-lWkTSZDv2vH1IZpPZcbL7LnFpZ6A/edit?gid=409244131#gid=409244131" target="_blank" rel="nofollow">
+         <a class="main_small_a_item" href="commingsoon.html" target="_blank" rel="nofollow">
             <button class="main_small_button_item">NOVEMBER</button>
           </a>
-		  <a class="main_small_a_item" href="https://docs.google.com/spreadsheets/d/1kRgh5MfKOAFFloUOQDbMfrf74SE0e33HxEHETcjzNG0/edit?gid=409244131#gid=409244131" target="_blank" rel="nofollow">
+		  <a class="main_small_a_item" href="commingsoon.html" target="_blank" rel="nofollow">
             <button class="main_small_button_item">DESEMBER</button>
           </a>
         </div>
