--- a/rmo.html
+++ b/rmo.html
@@ -74,7 +74,7 @@ https://github.com/ardacarofficial/links-website is open source project.
            <a class="main_small_a_item" href="commingsoon.html" target="_blank" rel="nofollow">
             <button class="main_small_button_item">MEI</button>
           </a>
-		   <a class="main_small_a_item" href="commingsoon.html" target="_blank" rel="nofollow">
+		   <a class="main_small_a_item" href="https://docs.google.com/spreadsheets/d/19zeMRE0LPEA3xX0_XFLezAhN90aYWt3j_c9LSfdr2J4/edit?gid=655098603#gid=655098603" target="_blank" rel="nofollow">
             <button class="main_small_button_item">JUNI</button>
           </a>
         </div>
