--- a/monthdoi.html
+++ b/monthdoi.html
@@ -107,7 +107,7 @@
 </head>
 <body>
     <div class="dashboard-header">
-        <h1>Kalender Bulanan</h1>
+        <h1>Dashboard Day Of Inventory ( DOI )</h1>
         <p>Pilih bulan untuk melihat detail</p>
     </div>
     
