--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         <!-- Daily Report -->
         <div id="daily" class="tab-content active">
             <div class="dashboard-grid">
-                <a href="https://docs.google.com/spreadsheets/d/1bo-avEQr4rXH3E90WVsdBmz4qwMoePp1LXTrjP-Rx8k/edit?gid=2093420675#gid=2093420675" class="report-card" target="_blank" rel="noopener noreferrer">>
+                <a href="https://docs.google.com/spreadsheets/d/1bo-avEQr4rXH3E90WVsdBmz4qwMoePp1LXTrjP-Rx8k/edit?gid=2093420675#gid=2093420675" class="report-card" target="_blank" rel="noopener noreferrer">
                     <div class="report-icon daily-1"><i class="fas fa-chart-line"></i></div>
                     <div class="report-title">Monitoring sales harian Area 2</div>
                 </a>
