--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                     document.querySelectorAll('.tab-btn').forEach(b => b.classList.remove('active'));
                     document.querySelectorAll('.tab-content').forEach(c => c.classList.remove('active'));
                     
-                    // Add active class to clicked button
+                    // Add active class to clicked buutton
                     this.classList.add('active');
                     
                     // Show corresponding content
