--- a/index.html
+++ b/index.html
@@ -189,17 +189,17 @@
         <!-- Daily Report -->
         <div id="daily" class="tab-content active">
             <div class="dashboard-grid">
-                <a href="https://docs.google.com/spreadsheets/d/1bo-avEQr4rXH3E90WVsdBmz4qwMoePp1LXTrjP-Rx8k/edit?gid=2093420675#gid=2093420675" class="report-card" target="_blank" rel="noopener noreferrer">
+                <a href="https://docs.google.com/spreadsheets/d/1bo-avEQr4rXH3E90WVsdBmz4qwMoePp1LXTrjP-Rx8k/edit?gid=2093420675#gid=2093420675" class="report-card" target="_blank" rel="nofollow"">
                     <div class="report-icon daily-1"><i class="fas fa-chart-line"></i></div>
                     <div class="report-title">Monitoring sales harian Area 2</div>
                 </a>
                 
-                <a href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/giri_handoko_hokben_co_id/ESOSX0rzPxlKrdpA2VE84VgBgv5hBTNNpUq58EYtTYc-Uw?e=sryyQA&CID=73069462-fbe6-522f-2be3-de6d745d1514" class="report-card" target="_blank" rel="noopener noreferrer">
+                <a href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/giri_handoko_hokben_co_id/ESOSX0rzPxlKrdpA2VE84VgBgv5hBTNNpUq58EYtTYc-Uw?e=sryyQA&CID=73069462-fbe6-522f-2be3-de6d745d1514" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-2"><i class="fas fa-map-marked-alt"></i></div>
                     <div class="report-title">Monitoring sales harian regional</div>
                 </a>
                 
-                <a href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/rachmat_alfathir_hokben_co_id/ETSq9hlBIrxLo-SLATB-owYB8BH9QOqaQaqwRjUBjFP0CQ?rtime=oP90ANiO3Ug" class="report-card" target="_blank" rel="noopener noreferrer">
+                <a href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/rachmat_alfathir_hokben_co_id/ETSq9hlBIrxLo-SLATB-owYB8BH9QOqaQaqwRjUBjFP0CQ?rtime=oP90ANiO3Ug" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-3"><i class="fas fa-wallet"></i></div>
                     <div class="report-title">Monitoring saldo akhir promo</div>
                 </a>
