--- a/index.html
+++ b/index.html
@@ -155,6 +155,9 @@
         .app-6 { color: #1abc9c; }
         .app-7 { color: #d35400; }
         .app-8 { color: #2980b9; }
+        .app-9 { color: #e74c3c; }
+        .app-10 { color: #3498db; }
+        .app-11 { color: #2ecc71; }
         
         @keyframes fadeIn {
             from { opacity: 0; transform: translateY(10px); }
@@ -349,6 +352,14 @@
                 <a href="http://172.18.100.166/Reports/Pages/Report.aspx?ItemPath=%2fDept+Customer+Experience%2fLaporan+Feedback+Customer%2fFeedback+Store" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon app-8"><i class="fas fa-comment-alt"></i></div>
                     <div class="report-title">Feedback monitoring</div>
+                </a>
+                <a href="https://online.hokben.net/lms/login/index.php" class="report-card" target="_blank" rel="nofollow"">
+                    <div class="report-icon app-9"><i class="fas fa-chart-line"></i></div>
+                    <div class="report-title">LMS</div>
+                </a>
+                <a href="https://forms.office.com/pages/responsepage.aspx?id=_ePu3TRUtkmHF1S-DfreIpRhEHlZ0-9KstYFWVq6n8hUOVBVR1I5NUI0VFFBU0pENTkwVklTV0lOOS4u&route=shorturl" class="report-card" target="_blank" rel="nofollow">
+                    <div class="report-icon app-11"><i class="fas fa-wallet"></i></div>
+                    <div class="report-title">Request Form Void Backdate</div>
                 </a>
             </div>
         </div>
