--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                 </a>
                 
                 <a href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/rachmat_alfathir_hokben_co_id/ESwPwYFRtCdPuEdvogS5-hkBwMKdoablyjZSTdK1ifdnzA?CID=376333d7-08fb-b456-f21f-d33ae5d8a654&e=QJgGG9" target="_blank" rel="nofollow">
-                    <div class="report-icon daily-5"><i class="fas fa-bug"></i></div>
+                    <div class="report-icon daily-5"><i class="fas fa-wallet"></i></div>
                     <div class="report-title">AREA 2 - Monthly Report Smallware</div>
                 </a>
                 <a href="checkmonth.html" class="report-card" target="_blank" rel="nofollow">
