--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
         .monthly-2 { color: #2ecc71; }
         .monthly-3 { color: #f1c40f; }
         .monthly-4 { color: #e74c3c; }
+        .monthly-5 { color: #9b59b6; }
         
         /* Project Report Colors */
         .project-1 { color: #9b59b6; }
@@ -279,7 +280,7 @@
                 </a>
                 
                 <a href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/rachmat_alfathir_hokben_co_id/ESwPwYFRtCdPuEdvogS5-hkBwMKdoablyjZSTdK1ifdnzA?CID=376333d7-08fb-b456-f21f-d33ae5d8a654&e=QJgGG9" target="_blank" rel="nofollow">
-                    <div class="report-icon daily-5"><i class="fas fa-wallet"></i></div>
+                    <div class="report-icon monthly-5"><i class="fas fa-wallet"></i></div>
                     <div class="report-title">AREA 2 - Monthly Report Smallware</div>
                 </a>
                 <a href="checkmonth.html" class="report-card" target="_blank" rel="nofollow">
