--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
         .monthly-3 { color: #f1c40f; }
         .monthly-4 { color: #e74c3c; }
         .monthly-5 { color: #9b59b6; }
+        .monthly-6 { color: #f39c12; }
         
         /* Project Report Colors */
         .project-1 { color: #9b59b6; }
@@ -287,7 +288,10 @@
                     <div class="report-icon monthly-3"><i class="fas fa-map-pin"></i></div>
                     <div class="report-title">Data kunjungan Area</div>
                 </a>
-                
+                 <a href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/hhb_aeonmalljgc_hokben_co_id/EcxxnJuwI5dAmOkFGCY5rKYBPNPNDMkXWDgm2HjKTKEsUA?e=QE7Cq7" class="report-card" target="_blank" rel="nofollow">
+                    <div class="report-icon monthly-6"><i class="fas fa-battery-full"></i></div>
+                    <div class="report-title">Monitoring Pengendalian Listrik Dan Air 2025</div>
+                </a>
                 <a href="https://bit.ly/MPRAREA2_2025" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon monthly-4"><i class="fas fa-file-upload"></i></div>
                     <div class="report-title">Upload MPR 2025</div>
