--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         <!-- Daily Report -->
         <div id="daily" class="tab-content active">
             <div class="dashboard-grid">
-                <a href="https://docs.google.com/spreadsheets/d/1bo-avEQr4rXH3E90WVsdBmz4qwMoePp1LXTrjP-Rx8k/edit?gid=2093420675#gid=2093420675" class="report-card" target="_blank" rel="nofollow"">
+                <a href="modal-month.html" target="_blank" rel="nofollow"">
                     <div class="report-icon daily-10"><i class="fas fa-money"></i></div>
                     <div class="report-title">Laporan Modal TMS </div>
                 </a>
