--- a/index.html
+++ b/index.html
@@ -196,6 +196,10 @@
         <!-- Daily Report -->
         <div id="daily" class="tab-content active">
             <div class="dashboard-grid">
+                <a href="modal-month.html" class="report-card" target="_blank" rel="nofollow">
+                    <div class="report-icon daily-10"><i class="fas fa-address-book"></i></div>
+                    <div class="report-title">Monitoring sales Reksa</div>
+                </a>
                 <a href="https://docs.google.com/spreadsheets/d/1bo-avEQr4rXH3E90WVsdBmz4qwMoePp1LXTrjP-Rx8k/edit?gid=2093420675#gid=2093420675" class="report-card" target="_blank" rel="nofollow"">
                     <div class="report-icon daily-1"><i class="fas fa-chart-line"></i></div>
                     <div class="report-title">Monitoring sales harian Area 2</div>
@@ -240,10 +244,7 @@
                     <div class="report-icon daily-9"><i class="fas fa-hand-holding-usd"></i></div>
                     <div class="report-title">Monitoring sales Reksa</div>
                 </a>
-                <a href="modal-month.html" target="_blank" rel="nofollow"">
-                    <div class="report-icon daily-10"><i class="fas fa-address-book"></i></div>
-                    <div class="report-title">Laporan Modal TMS </div>
-                </a>
+                 
             </div>
         </div>
         
