--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             <div class="dashboard-grid">
                 <a href="modal-month.html" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-10"><i class="fas fa-address-book"></i></div>
-                    <div class="report-title">Monitoring sales Reksa</div>
+                    <div class="report-title">Laporan Modal TMS</div>
                 </a>
                 <a href="https://docs.google.com/spreadsheets/d/1bo-avEQr4rXH3E90WVsdBmz4qwMoePp1LXTrjP-Rx8k/edit?gid=2093420675#gid=2093420675" class="report-card" target="_blank" rel="nofollow"">
                     <div class="report-icon daily-1"><i class="fas fa-chart-line"></i></div>
