--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         <!-- Daily Report -->
         <div id="daily" class="tab-content active">
             <div class="dashboard-grid">
-                <a href="modal-month.html" class="report-card" target="_blank" rel="nofollow">
+                <a href="commingsoon.html" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-10"><i class="fas fa-address-book"></i></div>
                     <div class="report-title">Laporan Modal TMS</div>
                 </a>
