--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                     <div class="report-icon daily-9"><i class="fas fa-hand-holding-usd"></i></div>
                     <div class="report-title">Monitoring sales Reksa</div>
                 </a>
-                <a href="https://ekabogainti-my.sharepoint.com/:x:/r/personal/vici_febriana_hokben_co_id/_layouts/15/Doc.aspx?sourcedoc=%7BFD0093C9-5314-40FD-AFB0-96B2D349DE4F%7D&file=02%20Area%202.xlsx&action=default&mobileredirect=true" class="report-card" target="_blank" rel="nofollow">
+                <a href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/vici_febriana_hokben_co_id/EcmTAP0UU_1Ar7CWstNJ3k8B1Q3MKH_tNebfeHc-NpNCmw?e=TfQ13l" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-11"><i class="fas fa-layer-group"></i></div>
                     <div class="report-title">DOI Operasional Pusat</div>
                 </a>
