--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                     <div class="report-icon daily-12"><i class="fas fa-user-plus"></i></div>
                     <div class="report-title">Rekap Keterisian Kursi dan Hujan 2025</div>
                 </a>
-                <a href="commingsoon.html" class="report-card" target="_blank" rel="nofollow">
+                <a href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/lisliyanah_hokben_co_id/EY8XGuEnI-hHgAZ99sUHCmgBEo4BLFDi_4NkECKwKqbIJw?e=8ACR1U" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon 13"><i class="fas fa-sort-amount-desc"></i></div>
                     <div class="report-title">Rekap Traffic count 2025</div>
                 </a>
