--- a/index.html
+++ b/index.html
@@ -256,9 +256,9 @@
                     <div class="report-icon daily-12"><i class="fas fa-user-plus"></i></div>
                     <div class="report-title">Rekap Keterisian Kursi dan Hujan 2025</div>
                 </a>
-                <a href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/lisliyanah_hokben_co_id/EY8XGuEnI-hHgAZ99sUHCmgBEo4BLFDi_4NkECKwKqbIJw?e=8ACR1U" class="report-card" target="_blank" rel="nofollow">
+                <a href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/lisliyanah_hokben_co_id/EdioU_pRa1FHvK3EfZR_k-8BFhthk9G6Si7NuqhBBBdM7g?e=SIzuM5" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon 13"><i class="fas fa-sort-amount-desc"></i></div>
-                    <div class="report-title">Rekap Traffic count 2025</div>
+                    <div class="report-title">Rekap Traffic count 7-13 Agustus 2025</div>
                 </a>
             </div>
         </div>
