--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                 </a>
                   <a href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/lisliyanah_hokben_co_id/Ec6pDWpzCtBGjU0hAwGN3m4BLA1qXkIJAwoSI0hTUCVCUA?e=3WIVCe" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-12"><i class="fas fa-user-plus"></i></div>
-                    <div class="report-title">Rekap Keterisian Kursi dan Hujan 2025</div>
+                    <div class="report-title">Rekap Keterisian Kursi dan Hujan 13-19 Agustus 2025</div>
                 </a>
                 <a href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/lisliyanah_hokben_co_id/EYUZ0dUMczpIjYpM4DhtAAgBBSSUMkbBzRZ6mvuiC_GWvA?e=b0bqt7" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon 13"><i class="fas fa-sort-amount-desc"></i></div>
