--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                     <div class="report-title">Check Menu Gofood</div>
                 </a>
                 
-                <a href="https://docs.google.com/spreadsheets/d/1w9JOoTpAQ6cUI299rQYCUYooTnQf1RrHROyJN4OCbZo/edit?gid=1890888505#gid=1890888505" class="report-card" target="_blank" rel="nofollow">
+                <a href="https://docs.google.com/spreadsheets/d/1YJwxKY8ldh6si6l6hYBuwHDF8BIOy-QPhSHwTFu2rK8/edit?gid=1217917440#gid=1217917440" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-9"><i class="fas fa-hand-holding-usd"></i></div>
                     <div class="report-title">Monitoring sales Reksa</div>
                 </a>
@@ -252,13 +252,13 @@
                     <div class="report-icon daily-11"><i class="fas fa-layer-group"></i></div>
                     <div class="report-title">DOI Operasional Pusat</div>
                 </a>
-                  <a href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/lisliyanah_hokben_co_id/Ec6pDWpzCtBGjU0hAwGN3m4BLA1qXkIJAwoSI0hTUCVCUA?e=3WIVCe" class="report-card" target="_blank" rel="nofollow">
+                  <a href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/lisliyanah_hokben_co_id/Ec6pDWpzCtBGjU0hAwGN3m4BLA1qXkIJAwoSI0hTUCVCUA?e=FYdU9o" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon daily-12"><i class="fas fa-user-plus"></i></div>
-                    <div class="report-title">Rekap Keterisian Kursi dan Hujan 13-19 Agustus 2025</div>
+                    <div class="report-title">Rekap Keterisian Kursi dan Hujan 27 Ags-2 Sept 2025</div>
                 </a>
-                <a href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/lisliyanah_hokben_co_id/EYUZ0dUMczpIjYpM4DhtAAgBBSSUMkbBzRZ6mvuiC_GWvA?e=b0bqt7" class="report-card" target="_blank" rel="nofollow">
+                <a href="https://ekabogainti-my.sharepoint.com/:x:/g/personal/lisliyanah_hokben_co_id/EYUZ0dUMczpIjYpM4DhtAAgBBSSUMkbBzRZ6mvuiC_GWvA?e=c2KE1p" class="report-card" target="_blank" rel="nofollow">
                     <div class="report-icon 13"><i class="fas fa-sort-amount-desc"></i></div>
-                    <div class="report-title">Rekap Traffic count 14-20 Agustus 2025</div>
+                    <div class="report-title">Rekap Traffic Count 28 Ags - 03 Sept 2025</div>
                 </a>
             </div>
         </div>
