--- a/select_month.html
+++ b/select_month.html
@@ -177,7 +177,7 @@
         </a>
         
         <!-- September -->
-        <a href="september.html" class="month-card september">
+        <a href="modal_september.html" class="month-card september">
             <div class="month-icon">
                 <i class="fas fa-leaf"></i>
             </div>
