Update and rename modal_september to modal_september.html

--- a/modal_september.html
+++ b/modal_september.html
@@ -273,7 +273,7 @@
         </div>
 
         <!-- Senayan City -->
-        <div class="store-card" onclick="window.open('', '_blank')">
+        <div class="store-card" onclick="window.open('https://docs.google.com/spreadsheets/d/1ZFUUH1dgUbbAOwY1tV8oLj_pk2S7ygRlLoxVyY-V3a8/edit?usp=sharing', '_blank')">
             <i class="fas fa-shopping-cart store-icon"></i>
             <div class="store-name">Senayan City</div>
         </div>
